cargue del proyecto

--- a/src/sass/_createActi.scss
+++ b/src/sass/_createActi.scss
@@ -1,4 +1,25 @@
 @use "mixingfunc";
+.cont-new-review {
+  @include mixingfunc.measures(1251px, 840px, 424px, 144px);
+  position: absolute;
+  background: #ffffff;
+  border-radius: 20px;
+
+  .title {
+    box-sizing: border-box;
+    padding-left: 19px;
+    padding-right: 10px;
+    position: absolute;
+    width: 1194px;
+    height: 51px;
+    left: 29px;
+    top: 65px;
+    color: #000;
+    border: 1px solid #8f8f8f;
+    border-radius: 10px;
+    font-size: 25px;
+  }
+}
 #cont-new-review {
   @include mixingfunc.measures(1251px, 840px, 424px, 144px);
   position: absolute;
@@ -20,14 +41,15 @@
     font-size: 25px;
   }
 }
+.open-form-input {
+  transform: translateY(-200%);
+}
 #list-select {
-  display: flex;
-  justify-content: space-between;
   .list-one {
     box-sizing: border-box;
     position: absolute;
     @include mixingfunc.measures(590px, 51px, 29px, 131px);
-    @include mixingfunc.font-style(Poppins, normal, 400, 25px, 130%, center);
+    @include mixingfunc.font-style(Poppins, normal, 400, 25px, 130%, justify);
     border: 1px solid #8f8f8f;
     border-radius: 10px;
     padding-left: 19px;
@@ -38,25 +60,37 @@
     box-sizing: border-box;
     position: absolute;
     @include mixingfunc.measures(590px, 51px, 633px, 131px);
-
     border: 1px solid #8f8f8f;
     border-radius: 10px;
-
     font-family: "Poppins";
     font-style: normal;
     font-weight: 400;
     font-size: 25px;
     line-height: 130%;
-    /* or 32px */
-
     color: #000000;
     padding-left: 19px;
   }
+
+  .level {
+    box-sizing: border-box;
+    position: absolute;
+    @include mixingfunc.measures(590px, 51px, 633px, 197px);
+    border: 1px solid #8f8f8f;
+    border-radius: 10px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 130%;
+    color: #000000;
+    padding-left: 19px;
+  }
+
   .author {
     box-sizing: border-box;
 
     position: absolute;
-    width: 1194px;
+    width: 590px;
     height: 51px;
     left: 29px;
     top: 197px;
@@ -79,19 +113,17 @@
 
     position: absolute;
     width: 1194px;
-    height: 483px;
+    height: 443px;
     left: 29px;
     top: 263px;
 
-    border: 1px solid #8f8f8f;
     border-radius: 10px;
-
     .txtarea {
-      margin-top: 40px;
+      margin-top: 10px;
       resize: none;
       border-radius: 10px;
       width: 1194px;
-      height: 441px;
+      height: 483px;
     }
   }
 }
@@ -134,4 +166,237 @@
   /* identical to box height, or 39px */
 
   color: #000000;
+}
+.container-notify-succes {
+  position: absolute;
+  width: 1251px;
+  height: 75px;
+  left: 424px;
+  top: 747px;
+  display: none;
+  background: #038c33;
+  border-radius: 20px;
+
+  .close-notify-succes {
+    position: absolute;
+    font-size: 35px;
+    color: #fff;
+    left: 95%;
+    right: 4.38%;
+    top: 27%;
+    bottom: 21.39%;
+  }
+  .check-succes {
+    position: absolute;
+    font-size: 35px;
+    left: 1.62%;
+    right: 94.58%;
+    top: 24%;
+    bottom: 22.67%;
+
+    color: rgba(255, 255, 255, 0.65);
+  }
+}
+
+#container-noti {
+  position: absolute;
+  display: flex;
+  width: 1251px;
+  height: 156px;
+  left: 424px;
+  top: 842px;
+
+  background: #2f88ff;
+  border-radius: 20px;
+  .noti__idea {
+    width: 120px;
+    height: 150px;
+    margin-left: 36px;
+    margin-right: 44px;
+    background: url("/src/public/bombillo.PNG");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  .noti__parrafo {
+    width: 1050px;
+    height: 154px;
+    padding-right: 34px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 130%;
+    /* or 39px */
+
+    text-align: justify;
+
+    color: #ffffff;
+  }
+
+  .parrafo-succes {
+    position: absolute;
+    width: 323px;
+    height: 39px;
+    left: 364px;
+    top: 18px;
+
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 130%;
+    /* identical to box height, or 39px */
+
+    color: #ffffff;
+  }
+  .parrafo-succes {
+    position: absolute;
+    width: 323px;
+    height: 39px;
+    left: 364px;
+    top: 18px;
+
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 130%;
+    /* identical to box height, or 39px */
+
+    color: #ffffff;
+  }
+  .parrafo-succes {
+    position: absolute;
+    width: 323px;
+    height: 39px;
+    left: 364px;
+    top: 18px;
+
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 130%;
+    /* identical to box height, or 39px */
+
+    color: #ffffff;
+  }
+}
+.parrafo-succes {
+  position: absolute;
+  width: 323px;
+  height: 39px;
+  left: 464px;
+  top: 18px;
+
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 130%;
+  /* identical to box height, or 39px */
+
+  color: #ffffff;
+}
+.none {
+  display: none;
+}
+.alert {
+  padding: 10px 20px;
+  border-radius: 8px;
+  display: none;
+  position: absolute;
+  bottom: 80px;
+  right: 30px;
+  z-index: 150;
+  transition: all 0.9s ease;
+}
+
+.alert.success {
+  background: #038c33;
+  border: 1px #60d560 solid;
+  color: #15540d;
+  border-radius: 20px;
+}
+
+.alert.deleted {
+  background: #f82222;
+  border: 1px #e14747 solid;
+
+  border-radius: 20px;
+}
+.alert.update {
+  background: #ff9811;
+  border: 1px #eab108 solid;
+  border-radius: 20px;
+}
+
+/*-------------Modal delete --------------------------*/
+
+
+
+#modal-container-de {
+  visibility: hidden;
+  position: absolute;
+  z-index: 1000;
+  @include mixingfunc.measures(100%, 100%, 0, 0);
+  background-color: rgba(143, 143, 143, 0.65);
+}
+.modal-de {
+  box-sizing: border-box;
+  position: absolute;
+  @include mixingfunc.measures(898px, 305px, 25%, 381px);
+  bottom: 338px;
+  background: rgba(255, 255, 255, 0.65);
+  border: 3px solid #0057ff;
+  box-shadow: 0px 4px 6px 3px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  transition: transform 1s;
+  transform: translateY(0%);
+
+  h3 {
+    position: absolute;
+    @include mixingfunc.measures(166px, 39px, 366px, 21px);
+    @include mixingfunc.font-style(Inter, normal, 600, 30px, 130%, center);
+    color: #000000;
+  }
+}
+#text-de {
+  box-sizing: border-box;
+  position: absolute;
+  @include mixingfunc.measures(808px, 129px, 45px, 82px);
+  @include mixingfunc.font-style(Inter, normal, 300, 20px, 130%, center);
+  border: 1px solid #8f8f8f;
+  border-radius: 10px;
+  resize: none;
+  color: #000000;
+  padding-left: 18px;
+  padding-top: 12px;
+}
+
+.bnt-de {
+  position: absolute;
+  /*   @include mixingfunc.measures(186px, 48px, 667px, 237px); */
+  @include mixingfunc.measures(137px, 32px, 692px, 245px);
+  @include mixingfunc.font-style(Inter, normal, 700, 25px, 130%, center);
+  background: #d80027;
+  border-radius: 20px;
+  position: absolute;
+  color: #ffffff;
+}
+
+.btn-de2 {
+  position: absolute;
+  @include mixingfunc.measures(84px, 32px, 45px, 245px);
+  @include mixingfunc.font-style(Inter, normal, 600, 25px, 130%, center);
+  color: #000000;
+}
+.modal-close-de {
+  transform: translateY(-200%);
+}
+.noticia {
+  transform: translateY(-900%);
 }
